--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "calvin-yuen-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@sentry/react": "^6.9.0",
     "@sentry/tracing": "^6.9.0",
@@ -18,6 +19,7 @@
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^4.1.0",
