--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "font-awesome": "^4.7.0",
     "joi-browser": "^13.4.0",
     "lodash": "^4.17.21",
+    "node-sass": "^6.0.1",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "query-string": "^7.0.1",
